Header/Footer Alignment Fix

--- a/css/Header.css
+++ b/css/Header.css
@@ -1,5 +1,5 @@
 .Header {
-    width: 98vw;
+    width: 100vw;
     height: 100px;
     color: var(--foreground-color);
     position: absolute;
